--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -167,7 +167,8 @@
 
             <div class="col-3">
                 <h3>Github</h3>
-                <div class="container-btn"><a href="dplproductions.github.io" class="btn btn-ghost btn-rounded">
+                <div class="container-btn"><a href="https://dplproductions.github.io/"
+                        class="btn btn-ghost btn-rounded">
                         <figure class="icon"><i class="fab fa-github-square"></i></figure>
                     </a></div>
                 <p><a href="#top-of-page">Return to top of page</a></p>
