--- a/index.html
+++ b/index.html
@@ -54,6 +54,22 @@
 
 <body>
 
+    <!-- Menu -->
+    <nav class="container-menu menu-desktop menu-sticky">
+        <a href="#"><img src="assets/img/website-logo.png" alt="website logo"></a>
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <li><a href="#" id="btn-cta"><span>Sign up</span><i class="fas fa-arrow-right"></i></a></li>
+        </ul>
+        <div class="item-icon">
+            <div class="bar1"></div>
+            <div class="bar2"></div>
+            <div class="bar3"></div>
+        </div>
+    </nav>
+
     <!-- header -->
     <!-- hero block -->
     <header class="hero-block text-center">
@@ -71,7 +87,7 @@
     <!-- navigation menu -->
     <nav>
 
-        <section class="container-flex theme-three text-center mobile-col-2 img-corners-soft icon-small">
+        <section class="container-flex theme-three text-center mobile-col-2 img-corners-soft icon-small" id="home">
 
             <div class="col-2">
 
@@ -106,7 +122,7 @@
     <!-- main content with sections -->
     <main>
 
-        <section class="theme-one container-flex cols-2-split split-image-right img-corners-soft">
+        <section class="theme-one container-flex cols-2-split split-image-right img-corners-soft" id="portfolio">
 
             <div class="col-2">
                 <h2>My Portfolio Showcase</h2>
@@ -123,7 +139,7 @@
 
         </section>
 
-        <section class="theme-two container-flex cols-2-split img-corners-soft split-image-left">
+        <section class="theme-two container-flex cols-2-split img-corners-soft split-image-left" id="contact">
 
             <div class="col-2">
                 <h2>Contact Information</h2>
